packages/integration-tests/src/tests/errors/views/minified-file-errors.ejs
<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="UTF-8">
	<title>Errors test</title>
  <%- renderAgent({}) %>
</head>
<body>
    <h1>Minified files with source map ids</h1>
    <button id="button1">Button 1</button>
    <button id="button2">Button 2</button>
    <script src="/errors/views/script1.min.js" type="module"></script>
    <script src="/errors/views/script2.min.js"></script>
</body>
</html>
